revise the application

--- a/index.html
+++ b/index.html
@@ -204,7 +204,10 @@
 					</div>
 				</div>
 			</div>
+
+			<!-- main home content -->
 			<div class="homearea">
+				<!-- Top category section -->
 				<div class="homearea_category">
 					<a class="homearea_category-item active" href="#">Fresh</a>
 					<a class="homearea_category-item" href="#">Regular</a>
@@ -213,7 +216,7 @@
 				<div class="homearea_slider">
 					<img src="./images/cover.png" width="100%" alt="cover" />
 				</div>
-				<!-- alertflex--grow-0 -->
+				<!-- alert flex--grow-0 -->
 				<div class="homearea_alert">
 					<h4 class="homearea_alert-head">Preorder</h4>
 					<h4 class="homearea_alert-subtitle">
@@ -221,7 +224,7 @@
 						এবং মাসের বাজার সরবরাহ করা হয় ২-৭ দিনে ।
 					</h4>
 				</div>
-				<!-- main contensts -->
+				<!-- main contents -->
 				<div class="homearea_content">
 					<div class="homearea_card">
 						<div class="homearea_card-tag">fresh</div>
@@ -664,7 +667,7 @@
 				<!-- footer -->
 				<div class="footer">
 					<div class="footer_col">
-						<img src="/images/logo.png" width="110" alt="logo" />
+						<img src="images/logo.png" width="110" alt="logo" />
 						<div class="footer_col-social">
 							<i class="fa fa-facebook" aria-hidden="true"></i>
 							<i class="fa fa-instagram" aria-hidden="true"></i>
